# boltz-metaflow

./: Dockerfile  README.md  setup.cfg
boltz_metaflow/: common.py
examples/: antibodies.yaml  many_seeds_8uzc.py
flows/: antibody_benchmark.py  antibody_benchmark.scan_antigen.py  predict.py
