[metadata]
name = boltz_metaflow
version = attr: boltz_metaflow.__version__
author = Tim O'Donnell
author_email = timodonnell@gmail.com
description = Run boltz-1 on AWS with metaflow
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/timodonnell/boltz-metaflow
project_urls =
    Bug Tracker = https://github.com/timodonnell/boltz-metaflow/issues
classifiers =
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    metaflow==2.12.28
    boltz
    DockQ
    ProDy
